# rust-ts-json-compiler

./: Cargo.toml  Makefile  README.md
src/: compiler.rs  lib.rs  main.rs
src/lexer/: lexer.rs  token.rs
src/parser/: parser.rs
src/syntax_tree/: mod.rs  syntax_tree.rs
tests/: lexer_test.rs
